# LoRA

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/data/: cord.yaml  cord_schema.json  synthetic_invoices.yaml  synthetic_invoices_schema.json
configs/model/: qwen3_5_9b_mm_qlora.yaml  tiny_mm_smoke.yaml
configs/sweep/: lora_rank.yaml  methods.yaml  quant.yaml  target_modules.yaml
configs/train/: dpo.yaml  sft_qlora.yaml
notebooks/: explore_lora_internals.ipynb
scripts/: 00_env_check.py  01_prepare_data.py  02_train.py  03_evaluate.py  04_sweep.py  05_make_pairs.py  06_dpo.py  07_demo.py  08_export.py  full_run.ps1
src/lora_lab/: __init__.py  config.py  constrained.py  data.py  dpo.py  eval.py  generate_utils.py  infer.py  merge.py  model.py  modules_discovery.py  pairs.py  registry.py  schema.py  sweep.py  synthetic.py  train.py
tests/: conftest.py  fakes.py  test_collator.py  test_config.py  test_forward_patch.py  test_metrics.py  test_modules_discovery.py  test_pairs.py  test_schema.py  test_sweep.py  test_synthetic.py
